tests/baselines/reference/es5-asyncFunction(strict=true).errors.txt
es5-asyncFunction.ts(1,13): error TS7005: Variable 'x' implicitly has an 'any' type.


==== es5-asyncFunction.ts (1 errors) ====
    declare var x;
                ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
    
    async function empty() {
    }
    
    async function singleAwait() {
        await x;
    }